set width chat bubble

--- a/src/components/chat-bubble/ChatBubble.scss
+++ b/src/components/chat-bubble/ChatBubble.scss
@@ -35,6 +35,8 @@
 			margin-block: 1rem;
 			max-height: 5.8em;
 			overflow: hidden;
+			max-width: 30rem;
+			word-wrap: break-word;
 		}
 
 		&-sender {
