set chatbox width while on mobile

--- a/src/components/chat-box/ChatBox.scss
+++ b/src/components/chat-box/ChatBox.scss
@@ -90,8 +90,8 @@
 
 .home-button {
 	position: fixed;
-	bottom: 20px;
-	right: 30px;
+	bottom: 3rem;
+	right: 3rem;
 	z-index: 99;
 	font-size: 18px;
 	outline: none;
