--- a/src/components/chat-bubble/ChatBubble.scss
+++ b/src/components/chat-bubble/ChatBubble.scss
@@ -128,3 +128,16 @@
 		object-fit: contain;
 	}
 }
+
+@media screen and (max-width: 768px) {
+	.chat {
+		&-bubble {
+			width: auto;
+			word-break: break-word;
+		}
+		
+		&-photo {
+			height: auto;
+		}
+	}
+ }
