--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -11,7 +11,7 @@ const titleSEO = props?.title || "Home";
 const keywordsSEO = props?.keywords
 	? props?.keywords.join(", ")
 	: ["Telegram", "Group programing", "indonesia"].join(", ");
-const summarySEO = props?.summary || "Kutipan chat dari berbagai group telegram progaming indonesia";
+const summarySEO = props?.summary || "Kutipan chat dari berbagai group Telegram programming indonesia";
 const urlSEO = props?.url || Astro.site;
 // We're just need the origin url e.g (https://www.tgif.teknologiumum.com/)
 const thumbnail = Astro.site + "/thumbnail.png";
