--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -10,7 +10,7 @@ const props = Astro.props as Props;
 const titleSEO = props?.title || "Home";
 const keywordsSEO = props?.keywords
 	? props?.keywords.join(", ")
-	: ["Telegram", "Group programing", "indonesia"].join(", ");
+	: ["Telegram", "Group programming", "indonesia"].join(", ");
 const summarySEO = props?.summary || "Kutipan chat dari berbagai group Telegram programming indonesia";
 const urlSEO = props?.url || Astro.site;
 // We're just need the origin url e.g (https://www.tgif.teknologiumum.com/)
