styling with class name first, like dicha said 🙏

--- a/src/components/chat-bubble/ChatBubble.scss
+++ b/src/components/chat-bubble/ChatBubble.scss
@@ -114,6 +114,7 @@
 		display: block;
 		border-radius: 0 3rem 3rem 3rem;
 		overflow: hidden;
+		padding: 0.8rem;
 	}
 
 	&-sticker {
@@ -138,6 +139,7 @@
 		
 		&-photo {
 			height: auto;
+			width: 100%;
 		}
 	}
  }
