--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -64,7 +64,6 @@ const { title, keywords, summary, url } = Astro.props as Props;
 		<Seo keywords={keywords} summary={summary} url={url} title={title} />
 		<script>
 			import "../scripts/spa-navigation";
-			import "../scripts/mobile-mode-switcher";
 		</script>
 
 		<script>
@@ -113,5 +112,9 @@ const { title, keywords, summary, url } = Astro.props as Props;
 				}
 			}
 		</style>
+
+		<script>
+			import "../scripts/mobile-mode-switcher";
+		</script>
 	</body>
 </html>
