--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -70,7 +70,7 @@ const { title, keywords, summary, url } = Astro.props as Props;
 			import "../scripts/chat-box-scroll-restoration";
 		</script>
 	</head>
-	<body>
+	<body data-is-pathname-null={pathname === "/"}>
 		<div class="container">
 			<Sidebar talks={talks} pathname={pathname} client:load />
 			<div class="chat-content" id="chat-content">
@@ -112,9 +112,5 @@ const { title, keywords, summary, url } = Astro.props as Props;
 				}
 			}
 		</style>
-
-		<script>
-			import "../scripts/mobile-mode-switcher";
-		</script>
 	</body>
 </html>
