fix: incorrect chat assets path

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -3,6 +3,7 @@ import { readdir, readFile } from "node:fs/promises";
 import { resolve } from "node:path";
 import { fileURLToPath } from "node:url";
 import { Metadata, metadataSchema } from "~/service/Metadata";
+import { resolveChatAssetsPath } from "~/utils/resolve-chat-assets-path";
 import { Sidebar } from "./sidebar";
 import Seo from "./Seo.astro";
 
@@ -14,7 +15,7 @@ import "@fontsource/unbounded/400.css";
 import "@fontsource/unbounded/600.css";
 import "@fontsource/jetbrains-mono/600.css";
 
-const CHATS_PATH = import.meta.env.DEV ? "../../../public/chats" : "../../public/chats";
+const CHATS_PATH = resolveChatAssetsPath();
 
 const files = await readdir(resolve(fileURLToPath(import.meta.url), CHATS_PATH), { withFileTypes: true });
 const readFileInstructions: Promise<string>[] = [];
