feat: enable analytics

--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -68,6 +68,10 @@ const { title, keywords, summary, url } = Astro.props;
 		<script>
 			import "../scripts/chat-box-scroll-restoration";
 		</script>
+		<script
+			async
+			src="https://analytics.teknologiumum.com/script.js"
+			data-website-id="c58a8a55-4992-49d3-96ad-04e3f4c39ac8"></script>
 	</head>
 	<body data-is-pathname-null={pathname === "/"}>
 		<div class="container">
