va: center align legend label markers

--- a/src/components/chat-bubble/MediaPoll.scss
+++ b/src/components/chat-bubble/MediaPoll.scss
@@ -28,6 +28,7 @@
 			margin-right: 0.5rem;
 			background-color: var(--marker-color);
 			border: 0.2rem variables.$black solid;
+			vertical-align: middle;
 		}
 	}
 }
